[tool.poetry]
name = "arus"
version = "1.1.8"
description = "Activity Recognition with Ubiquitous Sensing"
authors = ["qutang <tqshelly@gmail.com>"]
license = "GNU"
readme = "README.md"
repository = "https://github.com/qutang/arus"
documentation = "https://qutang.github.io/arus/"
keywords = [
    "ubiquitous computing", "activity recognition", "sensing", "data processing", "machine learning"
]
classifiers = [
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "arus" }
]
include = [
    "examples/**/*.py",
    "apps/arus_demo/*.py",
    "apps/arus_demo/*.png"
]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.17"
pandas = "^1.0.0"
scipy = "^1.3"
pathos = "^0.2.5"
matplotlib = "^3.1"
scikit-learn = "^0.22"
seaborn = "^0.9.0"
joblib = "0.11"
wget = "^3.2"
tzlocal = "^2.0.0"
loky = "^2.6.0"
loguru = "^0.5.0"
docopt = "^0.6.2"
alive-progress = "^1.5.1"
dataclasses = { version = "^0.7", python = "~3.6"}
pymetawear = {version = "^0.12.0", optional = true}
pysimplegui = {version = "^4.14.1", optional = true}
playsound = {version = "^1.2.2", optional = true}
dephell_versioning = {version = "^0.1.2", optional = true}
semver = {version = "^2.10.1", optional = true}

[tool.poetry.extras]
metawear = ["pymetawear"]
demo = ["pymetawear", "pysimplegui",'playsound']
dev = ["dephell_versioning", "semver"]

[tool.poetry.dev-dependencies]
pylint = "^2.4"
pytest = "^5.2"
autopep8 = "^1.4"
twine = "^3.2.0"
pytest-cov = "^2.8"
codecov = "^2.0"
pyinstaller = "^3.5"
pywin32-ctypes = "^0.2.0"
rope = "^0.16.0"
mkdocs = "^1.0.4"
jupyter = "^1.0.0"
pygments = "^2.6.1"
pymdown-extensions = "^7.1"
mkdocstrings = "^0.12.0"
mkdocs-material = "^5.2.3"
mkdocs-git-revision-date-localized-plugin = "^0.5.2"
mkdocs-minify-plugin = "^0.3.0"


[tool.poetry.scripts]
arus = 'arus.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
